--- a/src/components/Checkboxes/Checkboxes.css
+++ b/src/components/Checkboxes/Checkboxes.css
@@ -4,12 +4,10 @@
   align-items: center;
   padding-right: calc(65vw);
   padding-left: 47%;
-  border-top: 3px dashed #f5f5f5;
-  border-bottom: 3px dashed #f5f5f5;
   transition: transform 100ms ease;
 }
 
-@media (max-width: 810px) {
+@media (max-width: 1000px) {
   .container {
     padding-left: 44%;
   }
@@ -25,5 +23,7 @@
   display: flex;
   position: relative;
   left: 25px;
+  gap: 20px;
+
   transition: transform 100ms ease;
 }
